--- a/.github/workflows/main_webbysmine.yml
+++ b/.github/workflows/main_webbysmine.yml
@@ -25,6 +25,9 @@ jobs:
           source venv/bin/activate
 
       # Uncomment the next two lines if you have dependencies to install
+      - name: Install distutils
+        run: python -m pip install setuptools
+
       - name: Install dependencies
         run: pip install -r requirements.txt
 
