--- a/.github/workflows/main_webbysmine.yml
+++ b/.github/workflows/main_webbysmine.yml
@@ -27,10 +27,10 @@ jobs:
       # Uncomment the next two lines if you have dependencies to install
       - name: Install distutils
         run: python -m pip install setuptools
+
       - name: Upgrade pip and setuptools
-        run: | 
-        python -m pip install --upgrade pip setuptools
-        
+        run: python -m pip install --upgrade pip setuptools
+
       - name: Install dependencies
         run: pip install -r requirements.txt
 
