--- a/.github/workflows/main_webbysmine.yml
+++ b/.github/workflows/main_webbysmine.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: '3.12'
+          python-version: '3.8'
 
       - name: Create and start virtual environment
         run: |
@@ -28,8 +28,15 @@ jobs:
       - name: Install distutils
         run: python -m pip install setuptools
 
+
+      - name: Install numpy separately
+        run: |
+          pip install numpy
+
       - name: Upgrade pip and setuptools
-        run: python -m pip install --upgrade pip setuptools
+        run: |
+          python -m pip install --upgrade pip setuptools
+          pip install --upgrade setuptools
 
       - name: Install dependencies
         run: pip install -r requirements.txt
