--- a/.github/workflows/main_webbysmine.yml
+++ b/.github/workflows/main_webbysmine.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: '3.8'
+          python-version: '3.12'
 
       - name: Create and start virtual environment
         run: |
@@ -35,7 +35,7 @@ jobs:
 
       - name: Upgrade pip and setuptools
         run: |
-          python -m pip install --upgrade pip setuptools
+          python -m pip install --upgrade pip setuptools wheel
           pip install --upgrade setuptools
 
       - name: Install dependencies
