--- a/.github/workflows/main_webbysmine.yml
+++ b/.github/workflows/main_webbysmine.yml
@@ -24,22 +24,16 @@ jobs:
           python -m venv venv
           source venv/bin/activate
 
-      # Uncomment the next two lines if you have dependencies to install
-      - name: Install distutils
-        run: python -m pip install setuptools
-
+      - name: Upgrade pip and setuptools
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
 
       - name: Install numpy separately
         run: |
           pip install numpy
 
-      - name: Upgrade pip and setuptools
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install --upgrade setuptools
-
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install --no-use-pep517 -r requirements.txt
 
       - name: Zip artifact for deployment
         run: zip -r release.zip ./* -x "venv/*"
