--- a/.github/workflows/azure-function-trigger.yml
+++ b/.github/workflows/azure-function-trigger.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Invoke Azure Function
-      run: curl -d "" -X POST ${{ secrets.https://webbyapi.azurewebsites.net }}
+      run: curl -d "" -X POST ${{ secrets.AZSADATA }}
