--- a/.github/workflows/azure-function-trigger.yml
+++ b/.github/workflows/azure-function-trigger.yml
@@ -1,8 +1,12 @@
 name: Invoke Azure Function on Push
-on: [push]
+
+on:
+  workflow_dispatch:
+
 jobs:
-  build:
+  trigger:
     runs-on: ubuntu-latest
+    needs: [main_webbyapi, main_mywebbsi]
     steps:
     - name: Invoke Azure Function
       run: curl -d "" -X POST ${{ secrets.AZSADATA }}
