--- a/.github/workflows/main_mywebbsi.yml
+++ b/.github/workflows/main_mywebbsi.yml
@@ -1,12 +1,13 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - mywebbsi
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'public/**'
+      - 'index.js'
+      - 'package.json'
   workflow_dispatch:
 
 jobs:
