--- a/.github/workflows/main_webbyapi.yml
+++ b/.github/workflows/main_webbyapi.yml
@@ -1,17 +1,13 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js project to Azure Function App - WebbyApi
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'AzureFunction/**'
+      - 'NewFunction/**'
   workflow_dispatch:
-
-env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
   build_and_deploy:
