update function trigger

--- a/.github/workflows/main_webbyapi.yml
+++ b/.github/workflows/main_webbyapi.yml
@@ -8,6 +8,7 @@ on:
       - 'AzureFunction/**'
       - 'NewFunction/**'
       - 'MemoFunction/**'
+      - 'BloggFunction/**'
   workflow_dispatch:
 
 jobs:
