--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,34 +8,35 @@ on:
       - 'terraform/**'
 
 jobs:
-  plan:
+  terraform:
     runs-on: ubuntu-latest
-    steps:
-      # Checkout, Setup Terraform, and Terraform Init & Plan steps go here
-      # Example:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      # Setup Terraform and Terraform Plan steps...
-
-  apply:
-    needs: plan
-    runs-on: ubuntu-latest
-    environment: production
+    # Define environment variables here so they apply to all steps in the job
+    env:
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
+      
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 0.14.9
+          terraform_version: 0.14.9  # Specify your Terraform version here
 
-      - name: Terraform Apply
+      - name: Terraform Init
         run: |
           cd terraform/environments/prod
-          terraform apply -auto-approve
-        env:
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          terraform init
+
+      - name: Terraform Plan
+        run: |
+          cd terraform/environments/prod
+          terraform plan -out=tfplan
+
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main'  # Ensures this step runs only on the main branch
+        run: |
+          cd terraform/environments/prod
+          terraform apply -auto-approve tfplan
